Fix color contrast issues on AA level

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,6 +1,6 @@
 :root {
   --primary-color: #A4876A;
-  --secondary-color: #B0C9E1;
+  --secondary-color: #23395b;
   --accent1-color: #606C38;
   --accent2-color: #ECF3F8;
   --font-family1: "Roboto", sans-serif;
@@ -150,6 +150,18 @@ main section article img {
   display: flex;
   justify-content: space-between;
   margin-bottom: 75px;
+}
+
+figcaption {
+  color: #B9A38D;
+}
+
+p {
+  color: #B9A38D;
+}
+
+.hero p  {
+  color: white;
 }
 
 
